# bobt

./: .gitignore  .vercelignore  Cargo.toml  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json  vitest.config.ts  vitest.setup.ts
contracts/bobt_token/: Cargo.toml
contracts/bobt_token/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/bobt_token/test_snapshots/test/: test_admin_burn.1.json  test_approve_and_transfer_from.1.json  test_burn.1.json  test_cannot_clawback_unfrozen_account.1.json  test_cannot_mint_when_paused.1.json  test_cannot_transfer_from_frozen_account.1.json  test_cannot_transfer_to_frozen_account.1.json  test_cannot_transfer_to_self.1.json  test_cannot_transfer_when_paused.1.json  test_clawback.1.json  test_duplicate_request_id.1.json  test_freeze_unfreeze.1.json  test_initialize.1.json  test_insufficient_balance.1.json  test_mint_and_balance.1.json  test_mint_request_tracking.1.json  test_multiple_roles_same_account.1.json  test_old_owner_cannot_grant_roles.1.json  test_pause_unpause.1.json  test_request_exists.1.json  test_role_management.1.json  test_transfer.1.json  test_transfer_ownership.1.json  test_unauthorized_mint.1.json  test_version.1.json  test_zero_balance_query.1.json
contracts/oracle/: Cargo.toml
contracts/oracle/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/oracle/test_snapshots/test/: test_add_operator.1.json  test_add_operator_unauthorized.1.json  test_admin_can_update_prices.1.json  test_aggregated_price_insufficient_sources.1.json  test_initialize.1.json  (+15 more)
contracts/treasury/: Cargo.toml
contracts/treasury/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
(+112 files in other folders)
